# genegatari

./: .gitignore  CMakeLists.txt  README.md
include/: Common.h  Effect.h  EffectNone.h  EffectPerlin.h  EffectTest.h  GUI.h
src/: Common.cpp  EffectNone.cpp  EffectPerlin.cpp  EffectTest.cpp  GUI.cpp  Main.cpp
